--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>MI PREMERA PAGINA WEB</h1>
+    <h2>cas</h2>
     <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ipsum cum sed, officiis alias ratione sint totam magni iure illo odio quos dicta, quo molestiae fuga, magnam deserunt eveniet quas.</P>
 </body>
 </html>
